@@ -1,5 +1,6 @@
 1.6.8 RC3
 ---
+- added internal asserts to check pedanticaly check consistency in debug builds
 - fixed SSE3 check
 - added support for lua with swig
 - from now the format of an opengl image can be GL_ALPHA too. (only when for opengl, not usable anywhere else). it's more an hack then a solution.
